inicio react/next

--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -128,7 +128,7 @@
 
 <div class="register-container">
     <div class="form-box">
-        <img src="/static/bookly-logo.jpeg" alt="Bookly Logo" class="logo-login">
+        <img src="https://imgur.com/HLvpHYn.png" alt="Bookly Logo" class="logo-login">
 
         <h3 class="titulo-cadastro">Cadastro</h3>
         <p class="subtitulo-cadastro">Crie sua nova conta Bookly</p>
