--- a/src/main/resources/templates/login-form.html
+++ b/src/main/resources/templates/login-form.html
@@ -123,7 +123,7 @@
 
 <div class="login-container">
     <div class="form-box">
-        <img src="/static/bookly-logo.jpeg" alt="Bookly Logo" class="logo-login">
+        <img src="https://imgur.com/HLvpHYn.png" alt="Bookly Logo" class="logo-login">
 
         <p class="subtitulo-login">Acesse sua conta</p>
 
